alb.tf
resource "aws_lb" "application_load_balancer" {
  name = "web-external-load-balancer"
  internal = false
  load_balancer_type = "application"
  security_groups = [aws_security_group.alb-security-group.id]
  subnets = [aws_subnet.public-subnet-1.id, aws_subnet.public-subnet-2.id]
  enable_deletion_protection = false

  tags = {
    Name = "App Load Balancer"
  }
}

resource "aws_lb_target_group" "alb_target_group" {
  name = "appbalancer-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = aws_vpc.private_vpc.id

}

resource "aws_lb_target_group_attachment" "web-attachement" {
    target_group_arn = aws_lb_target_group.alb_target_group.arn
    target_id = aws_instance.PublicWebTemplate.id
    port = 80

}

## ALB listener that will redirect the requrest from port 80 to 443
resource "aws_lb_listener" "alb_http_listener" {
  load_balancer_arn = aws_lb.application_load_balancer.arn
  port = 80
  protocol = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port = 443
      protocol = "HTTPS"
      status_code = "HTTP_301"
    }
  }


}
